--- a/client/front.jade
+++ b/client/front.jade
@@ -134,17 +134,30 @@ template(name='model_scroller')
 template(name='healthclub_status')
     .ui.basic.segment
         .ui.inline.header
-            i.green.checkmark.icon
+            +water_status slug='upper_hot_tub'
             |upper hot tub
         div
         .ui.inline.header
-            i.green.checkmark.icon
+            +water_status slug='lower_hot_tub'
             |lower hot tub
         //- .ui.grey.inline.header
         //-     |100.2°
         div
         .ui.inline.header
-            i.green.checkmark.icon
+            +water_status slug='pool'
             |pool
         //- .ui.grey.inline.header
         //-     |80.1°
+
+
+template(name='water_status')
+    if is_staff
+        if on
+            i.green.checkmark.link.icon.toggle_status
+        else    
+            i.red.ban.link.icon.toggle_status
+    else
+        if on
+            i.green.checkmark.icon
+        else    
+            i.red.ban.icon
