gold styling on nav and buttons

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -856,12 +856,12 @@ template(name='boolean_edit')
             if true_icon
                 i.large.green.icon(class=true_icon)
             else
-                |Yes
+                |yes
         else
             if false_icon
                 i.large.red.icon(class=false_icon)
             else
-                |No
+                |no
 
 
 template(name='boolean_view')
