--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -2,7 +2,8 @@ template(name='rules_signing')
     with signing_doc
         .ui.container
             .ui.hidden.divider
-            .ui.grey.center.aligned.header please read and scroll down to sign
+            .ui.grey.center.aligned.header read and scroll down to sign
+            h1.ui.center.aligned.header gold run rules and regulations
             +document_view key='rules_regs'
             +user_card resident
             .ui.small.header
@@ -24,7 +25,8 @@ template(name='rules_signing')
                 .ui.small.header by signing below you agree to the rules and regulations and acknolwedge receipt via a valid email address
                 if signature_saved
                     +signature_view key='signature' direct=true
-                    i.pencil.large.icon.edit_signature
+                    if is_admin
+                        i.pencil.large.icon.edit_signature
                 else
                     +signature_edit key='signature' direct=true
                 if signature_saved
