--- a/client/unit.jade
+++ b/client/unit.jade
@@ -63,7 +63,7 @@ template(name='unit_residents')
         .ui.header
             +i name='group'
             |unit residents
-        .ui.cards
+        .ui.four.cards
             each residents
                 .ui.card
                     .image
