--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -91,9 +91,9 @@ template(name='user_edit')
                             +text_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' icon='user shield' direct=true
                             +date_view key='id_checked_date' label='government id checked date' icon='today' direct=true
                             //- with user_from_username_param
-                        +boolean_edit key='published' icon='eye' label='profile published'
+                        //- +boolean_edit key='published' icon='eye' label='profile published'
                     //- +payment_methods
-                    +user_settings
+                    //- +user_settings
                     
                     
 template(name='user_settings')
