--- a/client/staff.jade
+++ b/client/staff.jade
@@ -17,13 +17,13 @@ template(name='staff')
             +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
             +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
             +unit_key_widget
-        .twelve.wide.column.scrolling
+        .twelve.wide.column
             .ui.stackable.four.cards
                 each sessions
                     +hc_session
     //- +model_docs_crud model='communication'
     //- +kiosk_settings
-    //- +schedule
+    +schedule
     //- +shift_change_requests
     //- +view_chats
     
@@ -34,18 +34,26 @@ template(name='hc_session')
         if session_resident.kiosk_photo
             img.ui.image(src="{{c.url session_resident.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
         else
-            |old photo
+            //- |old photo
             img.ui.image(src="{{c.url session_resident.image_id width=300 height=300 gravity='face' crop='fill'}}")
         .content
-            .ui.inline.header
-                //- +i name=icon_class
-                |#{session_resident.first_name} #{session_resident.last_name}
+            a(href="/user/#{session_resident.username}")
+                .ui.inline.header
+                    |#{session_resident.first_name} #{session_resident.last_name}
             .ui.small.grey.header #{when}
             with session_resident
-                +text_view key='address' label='address' direct=true
-                +number_view key='building_number' label='building #' direct=true
-                +number_view key='unit_number' label='apartment #' direct=true
-                +text_view key='building_code' label='building code' direct=true
+                div
+                +i name='marker' classes='ui avatar image'
+                |#{address}
+                div
+                +i name='apartment' classes='ui avatar image'
+                |#{building_number}
+                //- +number_view key='building_number' label='building #' direct=true
+                div
+                +i name='home' classes='ui avatar image'
+                strong #{unit_number}
+                //- +number_view key='unit_number' label='unit #' direct=true
+                //- +text_view key='building_code' label='building code' direct=true
                 +lease_expiration_check
                 +rules_and_regs_check
             .ui.small.grey.header guests
@@ -62,8 +70,11 @@ template(name='hc_session')
             //- +lease_expiration_check
             //- +rules_and_regs_check
             +array_view key='roles' direct=true
-
-            +boolean_edit key='active' direct=true
+            if active
+                .ui.fluid.button.sign_out
+                    i.sign.out.icon
+                    |sign out
+            //- +boolean_edit key='active' direct=true
             //- +boolean_edit key='submitted' direct=true
             //- +boolean_edit key='approved' direct=true
                 
