garden key button return in hc_session list, simpler user edit interface, spacing under rules signing, move garden_key_checkout to staff page

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -158,13 +158,8 @@ template(name='big_user_card')
                     //- +i name='water-steam' classes='ui avatar image'
 
 
-template(name='garden_key_checkout')
-    .ui.basic.compact.button.garden_key_checkout
-        +i name='plant' classes='ui mini inline image'
-        strong checkout garden key
-
 template(name='unit_key_checkout')
-    .ui.basic.compact.button.unit_key_checkout
+    .ui.compact.button.unit_key_checkout
         +i name='key' classes='ui mini inline image'
         strong checkout unit key
 
