--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -33,6 +33,13 @@ template(name='rules_signing')
                     .ui.big.green.fluid.button.submit_rules
                         | submit signing
                         i.right.chevron.icon
+                    .ui.hidden.divider
+                    .ui.hidden.divider
+                    .ui.hidden.divider
+                    .ui.hidden.divider
+                    .ui.hidden.divider
+                    .ui.hidden.divider
+                    .ui.hidden.divider
 
 
 
@@ -80,3 +87,17 @@ template(name='add_guest')
                                     .ui.big.green.fluid.button.submit_guest
                                         | submit
                                         i.right.chevron.icon
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
+                                .ui.hidden.divider
