--- a/client/staff.jade
+++ b/client/staff.jade
@@ -25,7 +25,7 @@ template(name='staff')
     //- +kiosk_settings
     +schedule
     //- +shift_change_requests
-    //- +view_chats
+    +view_chats
     
     
 
