hide camera, add spacing in signature signing

--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -212,6 +212,6 @@ template(name='emails_edit')
                             i.caret.right.icon
                     .ui.small.icon.basic.button.remove_email
                         i.remove.icon
-    .ui.action.big.input
+    .ui.action.big.fluid.input
         input#new_email(type='email' placeholder='add new email address' autocomplete="off")
         #add_email.ui.submit.basic.button add email
