--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -11,6 +11,26 @@ template(name='rules_signing')
                 |valid email address for receipt
             .ui.header #{resident_doc.username}
             +emails_edit    
+            unless resident_email        
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+            
+            
+            
             //- .ui.fluid.action.input
             //-     input.email_value(type='text' value=resident_email)
             //- div
@@ -33,13 +53,23 @@ template(name='rules_signing')
                     .ui.big.green.fluid.button.submit_rules
                         | submit signing
                         i.right.chevron.icon
-                    .ui.hidden.divider
-                    .ui.hidden.divider
-                    .ui.hidden.divider
-                    .ui.hidden.divider
-                    .ui.hidden.divider
-                    .ui.hidden.divider
-                    .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
+                .ui.hidden.divider
 
 
 
@@ -87,17 +117,17 @@ template(name='add_guest')
                                     .ui.big.green.fluid.button.submit_guest
                                         | submit
                                         i.right.chevron.icon
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
-                                .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
+                            .ui.hidden.divider
